--- a/src/pages/blog/series/[series].astro
+++ b/src/pages/blog/series/[series].astro
@@ -17,7 +17,7 @@ const allSeries = await getAllSeries();
 ---
 
 <Layout title={`${seriesName} - Blog Series`}>
-  <div class="min-h-screen bg-background text-foreground">
+  <div class="min-h-screen bg-background text-foreground pt-24">
     <div class="container mx-auto px-4 py-8">
       <div class="max-w-4xl mx-auto">
         <!-- Back to blog button -->
